# turboagents-demo

./: .gitignore  README.md  pyproject.toml
.superoptix-demo/: .gitignore  .super  README.md  pyproject.toml
.superoptix-demo/tests/: conftest.py  test_agents.py
demo/: standalone_lancedb_demo.py  standalone_surrealdb_demo.py
scripts/: run_demo.py
superoptix-demo-workspace/: .pre-commit-config.yaml  .super  README.md  pyproject.toml
superoptix-demo-workspace/.superoptix/traces/: rag_surrealdb_dspy_demo.jsonl  rag_surrealdb_openai_demo.jsonl  rag_surrealdb_pydanticai_demo.jsonl
superoptix-demo-workspace/superoptix-demo-workspace/agents/rag_surrealdb_dspy_demo/pipelines/: rag_surrealdb_dspy_demo_pipeline.py  rag_surrealdb_dspy_demo_pipeline_compiled_spec.json
superoptix-demo-workspace/superoptix-demo-workspace/agents/rag_surrealdb_dspy_demo/playbook/: rag_surrealdb_dspy_demo_playbook.yaml
superoptix-demo-workspace/superoptix-demo-workspace/agents/rag_surrealdb_openai_demo/pipelines/: rag_surrealdb_openai_demo_openai_pipeline.py  rag_surrealdb_openai_demo_openai_pipeline_compiled_spec.json
superoptix-demo-workspace/superoptix-demo-workspace/agents/rag_surrealdb_openai_demo/playbook/: rag_surrealdb_openai_demo_playbook.yaml
superoptix-demo-workspace/superoptix-demo-workspace/agents/rag_surrealdb_pydanticai_demo/pipelines/: rag_surrealdb_pydanticai_demo_pydantic_ai_pipeline.py  rag_surrealdb_pydanticai_demo_pydantic_ai_pipeline_compiled_spec.json
superoptix-demo-workspace/superoptix-demo-workspace/agents/rag_surrealdb_pydanticai_demo/playbook/: rag_surrealdb_pydanticai_demo_playbook.yaml
superoptix-demo-workspace/tests/: test_agents.py
