[project]
name = "turboagents-demo"
version = "0.1.0"
description = "Standalone launch demos for TurboAgents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "turboagents[rag]>=0.1.0a2",
]

[project.optional-dependencies]
superoptix = [
  "superoptix[turboagents,frameworks-openai,frameworks-pydantic-ai]>=0.2.23",
]

[tool.uv]
package = false
